--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       School, <br /> Nnewi, Anambra State Nigeria (2010 - 2013)</li>
     <li>National Diploma, Mass Communication - Federal Polytechnic <br />
       Nekede Owerri, Imo State Nigeria (2016 - 2018) </li>
+    <li>B.Sc(ED) Guidance & Counselling Psychology. In view (2021 - Date)</li>
   </ul>
 
   <hr />
